@@ -107,7 +107,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<Substation> getSubstations() {
-        return getSubstationStream().collect(Collectors.toList());
+        return getSubstationStream().toList();
     }
 
     @Override
@@ -124,14 +124,14 @@ public class SubnetworkImpl extends AbstractNetwork {
     public Iterable<Substation> getSubstations(Country country, String tsoId, String... geographicalTags) {
         return StreamSupport.stream(getNetwork().getSubstations(country, tsoId, geographicalTags).spliterator(), false)
                 .filter(this::contains)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Iterable<Substation> getSubstations(String country, String tsoId, String... geographicalTags) {
         return StreamSupport.stream(getNetwork().getSubstations(country, tsoId, geographicalTags).spliterator(), false)
                 .filter(this::contains)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -147,7 +147,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<VoltageLevel> getVoltageLevels() {
-        return getVoltageLevelStream().collect(Collectors.toList());
+        return getVoltageLevelStream().toList();
     }
 
     @Override
@@ -173,7 +173,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<Line> getLines() {
-        return getLineStream().collect(Collectors.toList());
+        return getLineStream().toList();
     }
 
     @Override
@@ -184,7 +184,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<Branch> getBranches() {
-        return getBranchStream().collect(Collectors.toList());
+        return getBranchStream().toList();
     }
 
     @Override
@@ -245,7 +245,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<TieLine> getTieLines() {
-        return getTieLineStream().collect(Collectors.toList());
+        return getTieLineStream().toList();
     }
 
     @Override
@@ -266,7 +266,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<TwoWindingsTransformer> getTwoWindingsTransformers() {
-        return getTwoWindingsTransformerStream().collect(Collectors.toList());
+        return getTwoWindingsTransformerStream().toList();
     }
 
     @Override
@@ -287,7 +287,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<ThreeWindingsTransformer> getThreeWindingsTransformers() {
-        return getThreeWindingsTransformerStream().collect(Collectors.toList());
+        return getThreeWindingsTransformerStream().toList();
     }
 
     @Override
@@ -308,7 +308,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<Generator> getGenerators() {
-        return getGeneratorStream().collect(Collectors.toList());
+        return getGeneratorStream().toList();
     }
 
     @Override
@@ -329,7 +329,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<Battery> getBatteries() {
-        return getBatteryStream().collect(Collectors.toList());
+        return getBatteryStream().toList();
     }
 
     @Override
@@ -350,7 +350,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<Load> getLoads() {
-        return getLoadStream().collect(Collectors.toList());
+        return getLoadStream().toList();
     }
 
     @Override
@@ -371,7 +371,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<ShuntCompensator> getShuntCompensators() {
-        return getShuntCompensatorStream().collect(Collectors.toList());
+        return getShuntCompensatorStream().toList();
     }
 
     @Override
@@ -392,7 +392,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<DanglingLine> getDanglingLines(DanglingLineFilter danglingLineFilter) {
-        return getDanglingLineStream(danglingLineFilter).collect(Collectors.toList());
+        return getDanglingLineStream(danglingLineFilter).toList();
     }
 
     @Override
@@ -423,7 +423,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<StaticVarCompensator> getStaticVarCompensators() {
-        return getStaticVarCompensatorStream().collect(Collectors.toList());
+        return getStaticVarCompensatorStream().toList();
     }
 
     @Override
@@ -450,7 +450,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<Switch> getSwitches() {
-        return getSwitchStream().collect(Collectors.toList());
+        return getSwitchStream().toList();
     }
 
     @Override
@@ -471,7 +471,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<BusbarSection> getBusbarSections() {
-        return getBusbarSectionStream().collect(Collectors.toList());
+        return getBusbarSectionStream().toList();
     }
 
     @Override
@@ -486,7 +486,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<HvdcConverterStation<?>> getHvdcConverterStations() {
-        return getHvdcConverterStationStream().collect(Collectors.toList());
+        return getHvdcConverterStationStream().toList();
     }
 
     @Override
@@ -507,7 +507,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<LccConverterStation> getLccConverterStations() {
-        return getLccConverterStationStream().collect(Collectors.toList());
+        return getLccConverterStationStream().toList();
     }
 
     @Override
@@ -528,7 +528,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<VscConverterStation> getVscConverterStations() {
-        return getVscConverterStationStream().collect(Collectors.toList());
+        return getVscConverterStationStream().toList();
     }
 
     @Override
@@ -549,7 +549,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<HvdcLine> getHvdcLines() {
-        return getHvdcLineStream().collect(Collectors.toList());
+        return getHvdcLineStream().toList();
     }
 
     @Override
@@ -592,12 +592,12 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Collection<Identifiable<?>> getIdentifiables() {
-        return getNetwork().getIdentifiables().stream().filter(this::contains).collect(Collectors.toList());
+        return getNetwork().getIdentifiables().stream().filter(this::contains).toList();
     }
 
     @Override
     public <C extends Connectable> Iterable<C> getConnectables(Class<C> clazz) {
-        return getConnectableStream(clazz).collect(Collectors.toList());
+        return getConnectableStream(clazz).toList();
     }
 
     @Override
@@ -612,7 +612,7 @@ public class SubnetworkImpl extends AbstractNetwork {
 
     @Override
     public Iterable<Connectable> getConnectables() {
-        return getConnectableStream().collect(Collectors.toList());
+        return getConnectableStream().toList();
     }
 
     @Override
@@ -658,16 +658,16 @@ public class SubnetworkImpl extends AbstractNetwork {
         public Collection<Component> getConnectedComponents() {
             return getNetwork().getBusView().getConnectedComponents().stream()
                     .filter(c -> c.getBusStream().anyMatch(SubnetworkImpl.this::contains))
-                    .map(c -> new Subcomponent(c, SubnetworkImpl.this))
-                    .collect(Collectors.toList());
+                    .map(c -> (Component) new Subcomponent(c, SubnetworkImpl.this))
+                    .toList();
         }
 
         @Override
         public Collection<Component> getSynchronousComponents() {
             return getNetwork().getBusView().getSynchronousComponents().stream()
                     .filter(c -> c.getBusStream().anyMatch(SubnetworkImpl.this::contains))
-                    .map(c -> new Subcomponent(c, SubnetworkImpl.this))
-                    .collect(Collectors.toList());
+                    .map(c -> (Component) new Subcomponent(c, SubnetworkImpl.this))
+                    .toList();
         }
     }
 
@@ -732,8 +732,6 @@ public class SubnetworkImpl extends AbstractNetwork {
 
         // Move the substations and voltageLevels to the new network
         ref.setRef(new RefObj<>(null));
-//        getSubstationStream().forEach(s -> ((SubstationImpl) s).setSubnetworkRef(null));
-//        getVoltageLevelStream().forEach(v -> ((AbstractVoltageLevel) v).setSubnetworkRef(null));
 
         // Remove the old subnetwork from the subnetworks list of the current parent network
         NetworkImpl previousRootNetwork = rootNetworkRef.get();
